# teletable

./: .env  .gitignore  .tmp-anon-block-check.cjs  .tmp-approval-e2e.cjs  .tmp-auth-debug.cjs  .tmp-autoconn-check.cjs  .tmp-debug-auth.cjs  .tmp-debug-auth2.cjs  .tmp-debug-request.cjs  .tmp-debug-roominfo.cjs  .tmp-host-camtest.cjs  .tmp-host-click-probe.cjs  .tmp-host-flicker-check.cjs  .tmp-host-probe.cjs  .tmp-host-state-inspect.cjs  .tmp-host-status-snapshot.cjs  .tmp-log-e2e.cjs  .tmp-log-e2e4.cjs  .tmp-log-loggedin.cjs  .tmp-loggedin-e2e.cjs  .tmp-loggedin-e2e2.cjs  .tmp-loggedin-e2e3.cjs  .tmp-multicam-test.cjs  .tmp-real-camera-headed.cjs  .tmp-real-camera-probe.cjs  .tmp-realcam-e2e.cjs  .tmp-room-debug.cjs  .tmp-room-errors.cjs  .tmp-room-state-check.cjs  .tmp-route-auth-check.cjs  .tmp-signup-check.cjs  .tmp-starting-verify-live.cjs  .tmp-trace-hostsync.cjs  .tmp-xr-log-e2e.cjs  .tmp-xr-singlecam.cjs  README.md  ROBOT_INTEGRATION.md  ROBOT_INTEGRATION_OLD.md  next.config.ts  package.json  (+6 more)
SimpleRobotServer/: simple_robot_server.py
app/: ControlPointVisualizer.tsx  ControlSliders.tsx  HandViewer.tsx  HandVisualizer.tsx  IKRobot.ts  IKRobotComponent.tsx  IKRobotFrame.tsx  IKTest.ts  IKVisualizer.tsx  RobotArmVisualizer.tsx  RobotVisualizer.tsx  backendPlan.md  globals.css  page.tsx  (+5 more)
robot_server/: DEVICE_SCANNING.md  README.md  config.json  extra.md  pyproject.toml
robot_server/src/robot_server/: __init__.py  device_scanner.py  ik_robot_controller.py  main.py  robot_controller.py  server.py
robot_server/src/robot_server/robots/follower_1/: calibration.json
(+72 files in other folders)
