[project]
name = "teletable-robot-server"
version = "0.1.0"
description = "WebSocket server for receiving hand tracking data from TeleTable and controlling robots"
authors = [{name = "TeleTable Developer"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pyserial>=3.5",
    "numpy>=1.21.0",
    "lerobot[feetech,kinematics]",
    "evdev-binary",  # Add this explicitly
    "pyudev>=0.24.0",  # For better Linux device detection
    "psutil>=5.9.0",   # For system information and device detection
]

[project.scripts]
robot-server = "robot_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_server"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=23.0", 
    "flake8>=6.0",
]